s3 폴더 검색 추가

--- a/studio/src/renderer/index.html
+++ b/studio/src/renderer/index.html
@@ -6,8 +6,17 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
+      content="default-src 'self'; script-src 'self'; connect-src 'self' http://localhost:* https://*; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
     />
+    <style>
+      html, body, #root {
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+      }
+    </style>
   </head>
 
   <body>
