--- a/studio/src/renderer/index.html
+++ b/studio/src/renderer/index.html
@@ -6,7 +6,7 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; connect-src 'self' http://localhost:* https://*; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
+      content="default-src 'self'; script-src 'self'; connect-src 'self' http://localhost:* https://*; style-src 'self' 'unsafe-inline'; img-src 'self' data:; frame-src 'self' https://dash.gamepot.beta.ntruss.com/ https://*.ntruss.com https://www.google.com https://*.google.com"
     />
     <style>
       html, body, #root {
